<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:background="?attr/colorOnPrimary">

    <EditText
        android:id="@+id/hours"
        android:layout_width="93dp"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="00"
        android:inputType="number"
        android:textSize="48sp"
        android:autofillHints=""
        android:textColor="?attr/colorOnSecondary"
        android:textColorHint="?attr/colorOnSecondary"
        android:backgroundTint="?attr/colorOnSecondary"
        />

    <EditText
        android:id="@+id/minutes"
        android:layout_width="93dp"
        android:layout_height="84dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="65dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="00"
        android:inputType="number"
        android:textSize="48sp"
        android:textColor="?attr/colorOnSecondary"
        android:textColorHint="?attr/colorOnSecondary"
        android:backgroundTint="?attr/colorOnSecondary"
        />


    <EditText
        android:id="@+id/name_text_box"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="100dp"
        android:gravity="center_horizontal"
        android:hint="Name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="?attr/colorOnSecondary"
        android:textColorHint="?attr/colorOnSecondary"
        android:backgroundTint="?attr/colorOnSecondary"
        />


<!--    <TextView-->
<!--        android:id="@+id/sunday_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/name_text_box"-->
<!--        android:text="Sun"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:textSize="16sp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:clickable="false"-->
<!--        android:textColor="@color/grey"-->
<!--        />-->


<!--    <TextView-->
<!--        android:id="@+id/monday_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Mon"-->
<!--        android:layout_below="@id/name_text_box"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:textSize="16sp"-->
<!--        android:layout_toEndOf="@+id/sunday_button"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:clickable="true"-->
<!--        android:textColor="@color/grey"/>-->
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/tuesday_button"-->
<!--        android:text="Tues"-->
<!--        android:textSize="16sp"-->
<!--        android:layout_toEndOf="@id/monday_button"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_below="@id/name_text_box"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:clickable="true"-->
<!--        android:textColor="@color/grey"/>-->
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/wednesday_button"-->
<!--        android:text="Wed"-->
<!--        android:textSize="16sp"-->
<!--        android:layout_toEndOf="@id/tuesday_button"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_below="@id/name_text_box"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:clickable="true"-->
<!--        android:textColor="@color/grey"/>-->
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/thursday_button"-->
<!--        android:text="Thurs"-->
<!--        android:textSize="16sp"-->
<!--        android:layout_toEndOf="@id/wednesday_button"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_below="@id/name_text_box"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:clickable="true"-->
<!--        android:textColor="@color/grey"/>-->
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/friday_button"-->
<!--        android:text="Fri"-->
<!--        android:textSize="16sp"-->
<!--        android:layout_toEndOf="@id/thursday_button"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_below="@id/name_text_box"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:clickable="true"-->
<!--        android:textColor="@color/grey"/>-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/saturday_button"-->
<!--        android:text="Sat"-->
<!--        android:textSize="16sp"-->
<!--        android:layout_toEndOf="@id/friday_button"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_below="@id/name_text_box"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:clickable="true"-->
<!--        android:textColor="@color/grey"-->
<!--       />-->


    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="346dp"
        android:text="Cancel" />

    <Button
        android:id="@+id/submitbutton"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="346dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:color="@color/button_background"
        android:text="Add" />


    <TextView
        android:id="@+id/colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="156dp"
        android:text=":"
        android:textSize="40sp"
        android:textColor="?attr/colorOnSecondary"
        />

    <ToggleButton
        android:id="@+id/toggleAMPM"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/minutes"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="129dp"
        android:backgroundTint="?attr/colorOnSecondary"
        android:text="Toggle AM and PM"
        android:textColor="?attr/colorOnPrimary"
        android:textOff="AM"
        android:textOn="PM" />

</RelativeLayout>
